--- a/index.html
+++ b/index.html
@@ -2,78 +2,108 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Galada" rel="stylesheet">
+    <link rel="stylesheet" href="css/960.css"/>
     <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <title>My Website</title>
 </head>
 
 <body>
-  <header id="header">Mahi Creations</header>
+  <header id="main-header">Mahi Creations</header>
   <nav class="top">
     <ul>
       <li><a href=#>Home</a></li>
       <li><a href=aboutUs.html />About</a></li>
       <li><a href=Contact.html />Contact Us</a></li>
+      <li><a href=# />Shipping & Returns</a></li>
+      <li><a href=# />Cart</a></li>
     </ul>
   </nav>
 
   <section class="hero">
-    <h2></h2>
+    <header id="header">
+      <img src="../img/logo.png" alt="logo" height="30px" width="30px" />
+    </header>
+    <header class="hero-header">
+      <h2 class="hero-title">Get your Customised jwelleries at your home</h1>
+  </header>
   </section>
 
-  <nav class="categories"><----------------------------Shop by Category---------------------------------->
-    <ul>
-      <li><a href="#" /> Sets</a></li>
-      <li><a href="#" /> Earings</a></li>
-      <li><a href="#" /> Bangles</a></li>
-    </ul>
-  </nav>
-
-  <div class="two-column-section">
+  <div class="three-column-section">
     <div class="first-column">
       <h2>Customised as per your need</h2>
       <p>You select the design and we will cutomize the colors and size for your specific order</p>
-      <img src="../img/product6.jpg" alt="customixed jwellery"/>
+      <img src="../img/product2.jpg" alt="customixed jwellery" width="300px" height="200px"/>
     </div>
 
     <div class="second-column">
+      <h2>Affordable prices</h2>
+      <p>You couldn't find such a great jwellery at our price.</p>
+      <img src="../img/price.jpg" alt="price" width="300px" height="200px"/>
+    </div>
+
+
+    <div class="third-column">
       <h2>Get it home Delivered</h2>
       <p>We will deliver your favourite jwellery to your or your loved on'e doorstep.</p>
-      <img src="../img/delivery.png" alt="delivery"/>
+      <img src="../img/delivery.png" alt="delivery" width="300px" height="200px"/>
+    </div>
+</div>
+
+  <div class="container_12">
+    <div class="grid_12">
+      <h2>All products:</h2>
+    </div>
+
+    <div class="grid_4">
+      <img src="../img/product1.jpg" alt="blackEarings" width="150px" height="150px"><br>
+        <span id="product-name"><b>blackEarings</b>
+        <p><b>Price: 100</p>
+      </img>
+    </div>
+    <div class="grid_4">
+      <img src="../img/product7.jpg" alt="Green Bangles" width="150px" height="150px"><br>
+        <span id="product-name">Green Bangles</span>
+        <p><b>Price: 250</p>
+      </img>
+    </div>
+    <div class="grid_4">
+      <img src="../img/product3.jpg" alt="Green Bangles" width="150px" height="150px"><br>
+        <span id="product-name">Green Set</span>
+        <p><b>Price: 650</p>
+      </img>
+    </div>
+
+
+    <div class="grid_4">
+      <img src="../img/product4.jpg" alt="blackEarings" width="150px" height="150px"><br>
+        <span id="product-name">Multicolor set</span>
+        <p><b>Price: 900</p>
+      </img>
+    </div>
+    <div class="grid_4">
+      <img src="../img/product5.jpg" alt="Green Bangles" width="150px" height="150px"><br>
+        <span id="product-name">Beautiful Pompom set</span>
+        <p><b>Price: 1000</p>
+      </img>
+    </div>
+    <div class="grid_4">
+      <img src="../img/product6.jpg" alt="Green Bangles" width="150px" height="150px"><br>
+        <span id="product-name">Orange Bangles</span>
+        <p><b>Price: 210</p>
+      </img>
     </div>
   </div>
 
-  <div class="all-product-header"></div>
-    <h2>All Products:</h2>
-  </div>
 
-  <div class="row-product-listing">
-    <div class="product-row1">
-      <aside>Left Section
-        <img src="../img/product1.jpg" alt="blackEarings" size="20px">
-          <span id="product-name">blackEarings</span>
-          <p><b>Price: 100</p>
-        </img>
-      </aside>
-      <main>Main Content
-        <img src="../img/product2.jpg" alt="Green Bangles" size="20px">
-          <span id="product-name">Green Bangles</span>
-          <p><b>Price: 250</p>
-        </img>
-      </main>
-      <section>Right Section
-        <imgsrc="../img/product3.jpg" alt="Green Set" size="20px">
-          <span id="product-name">Green Bangles</span>
-          <p><b>Price: 250</p>
-        </img>
-      </section>
-    </div>
-    <!-- <div class="product-row2">
-      <img class="responsive-image-square" src="../img/product4.jpg" alt="Blue Jhumki" size="20px"/>
-      <img class="responsive-image-square" src="../img/product5.jpg" alt="Blue Jhumki" size="20px"/>
-      <img class="responsive-image-square" src="../img/product6.jpg" alt="Blue Jhumki" size="20px"/>
-    </div>
-    <div class="product-row3">
-      <img class="responsive-image-square" src="../img/product7.jpg" alt="Blue Jhumki" size="20px"/>
-    </div>
-  </div> -->
+  <footer>
+    <span style="font-size: 2em; color: Tomato;">
+      <i class="fas fa-link" ></i>
+    </span>
+
+    <span style="font-size: 40px; color: Dodgerblue;">
+      <i class="fab fa-facebook"></i>
+    </span>
+  </footer>
 </body>
