made website responsive

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Galada" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
     <link rel="stylesheet" href="css/960.css"/>
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
@@ -28,15 +28,12 @@
           <ul>
             <li><a href=#>Home</a></li>
             <li><a href="/Contact.html" />Contact Us</a></li>
-            <li><a href=# />Shipping & Returns</a></li>
+            <li><a href=# />Track Status</a></li>
             <li><a href=# /><i class="fas fa-cart-plus"></i></a></li>
           </ul>
         </div>
     </div>
   </header>
-
-
-
 
   <section class="hero">
         <header class="hero-header">
@@ -44,69 +41,66 @@
     </header>
   </section>
 
-  <div id="container1" class="container_12" >
-    <div class="grid_12">
-    </div>
-
-    <div class="grid_4">
-      <h2><b>Customised as per your need</b></h2>
-      <img src="../img/product2.jpg" alt="customixed jwellery" width="300px" height="200px">
-      <p>You select the design and we will cutomize the colors and size for your specific order</p>
+  <section class="three-column-section">
+    <div class="first-column">
+      <h2>Customised as per your need</h2>
+      <img src="../img/prod12.jpg" alt="customixed jwellery" >
+      <!-- <p>You select the design and we will cutomize the colors and size for your specific order</p> -->
       </img>
     </div>
-    <div class="grid_4">
+    <div class="second-column">
       <h2>Affordable prices</h2>
-      <img src="../img/price.jpg" alt="price" width="300px" height="200px">
-      <p>You couldn't find such a great jwellery at our price.</p>
+      <img src="../img/price.jpg" alt="price" >
+      <!-- <p>You couldn't find such a great jwellery at our price.</p> -->
       </img>
     </div>
-    <div class="grid_4">
+    <div class="third-column">
       <h2>Get it home Delivered</h2>
-      <img src="../img/delivery.png" alt="delivery" width="300px" height="200px">
-      <p>We will deliver your favourite jwellery to your or your loved one's doorstep.</p>
+      <img src="../img/delivery.png" alt="delivery">
+      <!-- <p>We will deliver your favourite jwellery to your or your loved one's doorstep.</p> -->
       </img>
     </div>
-  </div>
+  </section>
 
-  <div id="container2" class="container_12">
+  <div id="container1" class="container_12">
     <div class="grid_12">
       <h2>All products:</h2>
     </div>
 
     <div class="grid_4">
-      <img src="../img/product1.jpg" alt="blackEarings" width="150px" height="150px"><br>
+      <img src="../img/product1.jpg" alt="blackEarings" ><br>
         <span id="product-name"><b>blackEarings</b>
         <p><b>Price: 100</p>
       </img>
     </div>
     <div class="grid_4">
-      <img src="../img/product7.jpg" alt="Green Bangles" width="150px" height="150px"><br>
+      <img src="../img/product7.jpg" alt="Green Bangles" ><br>
         <span id="product-name">Green Bangles</span>
         <p><b>Price: 250</p>
       </img>
     </div>
     <div class="grid_4">
-      <img src="../img/product3.jpg" alt="Green Bangles" width="150px" height="150px"><br>
+      <img src="../img/product3.jpg" alt="Green Bangles" ><br>
         <span id="product-name">Green Set</span>
         <p><b>Price: 650</p>
       </img>
     </div>
 
 
-    <div id="container3" class="grid_4">
-      <img src="../img/product4.jpg" alt="blackEarings" width="150px" height="150px"><br>
+    <div id="container2" class="grid_4">
+      <img src="../img/product4.jpg" alt="blackEarings" ><br>
         <span id="product-name">Multicolor set</span>
         <p><b>Price: 900</p>
       </img>
     </div>
     <div class="grid_4">
-      <img src="../img/product5.jpg" alt="Green Bangles" width="150px" height="150px"><br>
+      <img src="../img/product5.jpg" alt="Green Bangles" ><br>
         <span id="product-name">Beautiful Pompom set</span>
         <p><b>Price: 1000</p>
       </img>
     </div>
     <div class="grid_4">
-      <img src="../img/product6.jpg" alt="Green Bangles" width="150px" height="150px"><br>
+      <img src="../img/product6.jpg" alt="Green Bangles" ><br>
         <span id="product-name">Orange Bangles</span>
         <p><b>Price: 210</p>
       </img>
@@ -116,11 +110,11 @@
 
   <footer>
     <span style="font-size: 2em; color: Tomato;">
-      <i class="fas fa-link" ></i>
+      <a href="https://www.google.com/url?q=https://nikkimahi.myshopmatic.com&sa=D&source=hangouts&ust=1531205131085000&usg=AFQjCNHjTVJx8JxxqBB3Ec4-8k25bVs5ww" /><i class="fas fa-link"></i></a>
     </span>
 
     <span style="font-size: 40px; color: Dodgerblue;">
-      <i class="fab fa-facebook"></i>
+      <a href="https://www.google.com/url?q=https://www.facebook.com/pg/Mahi-Creation-598609117164912/groups/&sa=D&source=hangouts&ust=1531205131085000&usg=AFQjCNGz52A0l2H-BRhwmFKUCKLCjg82LA" /><i class="fab fa-facebook"></i></a>
     </span>
   </footer>
 </body>
