updated after review

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
           <ul>
             <li><a href=#>Home</a></li>
             <li><a href="/Contact.html" />Contact Us</a></li>
-            <li><a href=# />Track Status</a></li>
-            <li><a href=# /><i class="fas fa-cart-plus"></i></a></li>
+            <li><a href=# />Order Status</a></li>
+            <li><a href=# /><i class="fas fa-cart-plus"></i>Cart</a></li>
           </ul>
         </div>
     </div>
@@ -49,61 +49,55 @@
       </img>
     </div>
     <div class="second-column">
-      <h2>Affordable prices</h2>
+      <h2>Affordable Prices</h2>
       <img src="../img/price.jpg" alt="price" >
       <!-- <p>You couldn't find such a great jwellery at our price.</p> -->
       </img>
     </div>
     <div class="third-column">
-      <h2>Get it home Delivered</h2>
+      <h2>Get it Home Delivered</h2>
       <img src="../img/delivery.png" alt="delivery">
       <!-- <p>We will deliver your favourite jwellery to your or your loved one's doorstep.</p> -->
       </img>
     </div>
   </section>
 
-  <div id="container1" class="container_12">
-    <div class="grid_12">
-      <h2>All products:</h2>
+<h2>All products:</h2>
+  <div id=all-products>
+    <div class="products">
+      <img src="../img/product1.jpg" alt="blackEarings" ></img>
+      <span id="product-name">blackEarings</span>
+      <p>Price: 100</p>
     </div>
+    <div class="products">
+      <img src="../img/product2.jpg" alt="Green Bangles" ></img>
+      <span id="product-name">Green Bangles</span>
+      <p>Price: 250</p>
 
-    <div class="grid_4">
-      <img src="../img/product1.jpg" alt="blackEarings" ><br>
-        <span id="product-name"><b>blackEarings</b>
-        <p><b>Price: 100</p>
-      </img>
     </div>
-    <div class="grid_4">
-      <img src="../img/product7.jpg" alt="Green Bangles" ><br>
-        <span id="product-name">Green Bangles</span>
-        <p><b>Price: 250</p>
-      </img>
-    </div>
-    <div class="grid_4">
-      <img src="../img/product3.jpg" alt="Green Bangles" ><br>
-        <span id="product-name">Green Set</span>
-        <p><b>Price: 650</p>
-      </img>
-    </div>
+    <div class="products">
+      <img src="../img/product3.jpg" alt="Green Set"></img>
+      <span id="product-name">Green Set</span>
+      <p>Price: 650</p>
 
+    </div>
+    <div class="products">
+      <img src="../img/product4.jpg" alt="Green Bangles" ></img>
+      <span id="product-name">Beautiful Pompom set</span>
+      <p>Price: 1000</p>
 
-    <div id="container2" class="grid_4">
-      <img src="../img/product4.jpg" alt="blackEarings" ><br>
-        <span id="product-name">Multicolor set</span>
-        <p><b>Price: 900</p>
-      </img>
     </div>
-    <div class="grid_4">
-      <img src="../img/product5.jpg" alt="Green Bangles" ><br>
-        <span id="product-name">Beautiful Pompom set</span>
-        <p><b>Price: 1000</p>
-      </img>
-    </div>
-    <div class="grid_4">
-      <img src="../img/product6.jpg" alt="Green Bangles" ><br>
+    <div class="products">
+      <img src="../img/product5.jpg" alt="Green Bangles" ></img>
         <span id="product-name">Orange Bangles</span>
         <p><b>Price: 210</p>
-      </img>
+
+    </div>
+    <div class="products">
+      <img src="../img/product6.jpg" alt="Green Bangles" ></img>
+        <span id="product-name">Orange Bangles</span>
+        <p><b>Price: 210</p>
+
     </div>
   </div>
 
