--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
   </header>
 
   <section class="hero">
-        <header class="hero-header">
-      <h2 class="hero-title">Get your Customised jwelleries at your home</h1>
+    <header class="hero-header">
+      <h2 class="hero-title">Get your Customised jwelleries at your home</h2>
     </header>
   </section>
 
@@ -65,9 +65,9 @@
 <h2>All products:</h2>
   <div id=all-products>
     <div class="products">
-      <img src="../img/product1.jpg" alt="blackEarings" ></img>
-      <span id="product-name">blackEarings</span>
-      <p>Price: 100</p>
+      <img src="../img/product1.jpg" alt="Yellow Set" ></img>
+      <span id="product-name">Yellow Set</span>
+      <p>Price: 500</p>
     </div>
     <div class="products">
       <img src="../img/product2.jpg" alt="Green Bangles" ></img>
@@ -88,13 +88,13 @@
 
     </div>
     <div class="products">
-      <img src="../img/product5.jpg" alt="Green Bangles" ></img>
-        <span id="product-name">Orange Bangles</span>
-        <p><b>Price: 210</p>
+      <img src="../img/product5.jpg" alt="Multicolor set" ></img>
+        <span id="product-name">Multicolor set</span>
+        <p><b>Price: 600</p>
 
     </div>
     <div class="products">
-      <img src="../img/product6.jpg" alt="Green Bangles" ></img>
+      <img src="../img/product6.jpg" alt="Orange Bangles" ></img>
         <span id="product-name">Orange Bangles</span>
         <p><b>Price: 210</p>
 
@@ -103,11 +103,11 @@
 
 
   <footer>
-    <span style="font-size: 2em; color: Tomato;">
+    <span style="font-size: 2em">
       <a href="https://www.google.com/url?q=https://nikkimahi.myshopmatic.com&sa=D&source=hangouts&ust=1531205131085000&usg=AFQjCNHjTVJx8JxxqBB3Ec4-8k25bVs5ww" /><i class="fas fa-link"></i></a>
     </span>
 
-    <span style="font-size: 40px; color: Dodgerblue;">
+    <span style="font-size: 40px">
       <a href="https://www.google.com/url?q=https://www.facebook.com/pg/Mahi-Creation-598609117164912/groups/&sa=D&source=hangouts&ust=1531205131085000&usg=AFQjCNGz52A0l2H-BRhwmFKUCKLCjg82LA" /><i class="fab fa-facebook"></i></a>
     </span>
   </footer>
