--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
-<doctype html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css?family=Galada" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
-    <link rel="stylesheet" href="css/960.css"/>
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css"/>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Mahi Creations</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
+  <link href="https://fonts.googleapis.com/css?family=Galada" rel="stylesheet">
+  <link rel="stylesheet" href="/css/reset.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/index.css"/>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <title>Mahi Creations</title>
 </head>
 
 <body>
   <header class="main-header">
     <div id="nav-bar">
+      <div id="top-nav">
         <div class="nav-left">
           <div id="nav-logo">
             <img src="../img/site-logo.png" alt="logo"/>
@@ -24,14 +24,16 @@
           <input type="text" name="search-box"  />
           <button type="submit" name="search-button"><i class="fas fa-search"></i></button>
         </div>
-        <div class="nav-right">
-          <ul>
-            <li><a href=#>Home</a></li>
-            <li><a href="/Contact.html" />Contact Us</a></li>
-            <li><a href=# />Order Status</a></li>
-            <li><a href=# /><i class="fas fa-cart-plus"></i>Cart</a></li>
-          </ul>
-        </div>
+      </div>
+
+      <div class="nav-right">
+        <ul>
+          <li><a href=#>Home</a></li>
+          <li><a href="/Contact.html" />Contact Us</a></li>
+          <li><a href=# />Order Status</a></li>
+          <li><a href=# /><i class="fas fa-cart-plus"></i>Cart</a></li>
+        </ul>
+      </div>
     </div>
   </header>
 
@@ -42,28 +44,14 @@
   </section>
 
   <section class="three-column-section">
-    <div class="first-column">
-      <h2>Customised as per your need</h2>
-      <img src="../img/prod12.jpg" alt="customixed jwellery" >
-      <!-- <p>You select the design and we will cutomize the colors and size for your specific order</p> -->
-      </img>
-    </div>
-    <div class="second-column">
-      <h2>Affordable Prices</h2>
-      <img src="../img/price.jpg" alt="price" >
-      <!-- <p>You couldn't find such a great jwellery at our price.</p> -->
-      </img>
-    </div>
-    <div class="third-column">
-      <h2>Get it Home Delivered</h2>
-      <img src="../img/delivery.png" alt="delivery">
-      <!-- <p>We will deliver your favourite jwellery to your or your loved one's doorstep.</p> -->
-      </img>
-    </div>
+    <div><img src="../img/new.jpg" alt="customixed jwellery" ></img></div>
+    <div><img src="../img/price.jpg" alt="price" ></img></div>
+    <div><img src="../img/delivery.png" alt="delivery"></img></div>
   </section>
 
-<h2>All products:</h2>
+  <h2 id="product-heading">All products</h2>
   <div id=all-products>
+
     <div class="products">
       <img src="../img/product1.jpg" alt="Yellow Set" ></img>
       <span id="product-name">Yellow Set</span>
@@ -73,8 +61,10 @@
       <img src="../img/product2.jpg" alt="Green Bangles" ></img>
       <span id="product-name">Green Bangles</span>
       <p>Price: 250</p>
-
     </div>
+
+
+
     <div class="products">
       <img src="../img/product3.jpg" alt="Green Set"></img>
       <span id="product-name">Green Set</span>
@@ -85,30 +75,32 @@
       <img src="../img/product4.jpg" alt="Green Bangles" ></img>
       <span id="product-name">Beautiful Pompom set</span>
       <p>Price: 1000</p>
-
     </div>
+
+
+
     <div class="products">
       <img src="../img/product5.jpg" alt="Multicolor set" ></img>
-        <span id="product-name">Multicolor set</span>
-        <p><b>Price: 600</p>
-
-    </div>
-    <div class="products">
-      <img src="../img/product6.jpg" alt="Orange Bangles" ></img>
+      <span id="product-name">Multicolor set</span>
+      <p><b>Price: 600</p>
+      </div>
+      <div class="products">
+        <img src="../img/product6.jpg" alt="Orange Bangles" ></img>
         <span id="product-name">Orange Bangles</span>
         <p><b>Price: 210</p>
+        </div>
+      </div>
 
-    </div>
-  </div>
 
+      <footer>
+        <span style="font-size: 2em">
+          <a href="https://www.google.com/url?q=https://nikkimahi.myshopmatic.com&sa=D&source=hangouts&ust=1531205131085000&usg=AFQjCNHjTVJx8JxxqBB3Ec4-8k25bVs5ww" /><i class="fas fa-link"></i></a>
+        </span>
 
-  <footer>
-    <span style="font-size: 2em">
-      <a href="https://www.google.com/url?q=https://nikkimahi.myshopmatic.com&sa=D&source=hangouts&ust=1531205131085000&usg=AFQjCNHjTVJx8JxxqBB3Ec4-8k25bVs5ww" /><i class="fas fa-link"></i></a>
-    </span>
+        <span style="font-size: 40px">
+          <a href="https://www.google.com/url?q=https://www.facebook.com/pg/Mahi-Creation-598609117164912/groups/&sa=D&source=hangouts&ust=1531205131085000&usg=AFQjCNGz52A0l2H-BRhwmFKUCKLCjg82LA" /><i class="fab fa-facebook"></i></a>
+        </span>
+      </footer>
+    </body>
 
-    <span style="font-size: 40px">
-      <a href="https://www.google.com/url?q=https://www.facebook.com/pg/Mahi-Creation-598609117164912/groups/&sa=D&source=hangouts&ust=1531205131085000&usg=AFQjCNGz52A0l2H-BRhwmFKUCKLCjg82LA" /><i class="fab fa-facebook"></i></a>
-    </span>
-  </footer>
-</body>
+    </html>
